2011-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  Fixes for the exact cost function.

2011-03-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/gen.c,
	  src/z80/ralloc2.cc:
	  gbz80 fixes.

2011-03-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/SDCCicode.h,
	  src/z80/ralloc2.cc:
	  Make sdcc the best compiler for the Z80.

2011-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  sfr fixes for accurate cost function.

2011-03-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc:
	  Code reorganization for a more accurate cost function.

2011-03-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Code reorganization for a more accurate cost function.

2011-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/z80.h,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Code reorganization for a more accurate cost function.

2011-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/main.c:
	  Register allocator option cleanup.

2011-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCmacro.c, src/SDCCmacro.h, src/SDCCutil.c,
	  src/SDCCutil.h: dbuf-ized SDCCmacro.c

2011-03-19 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h, src/SDCCmacro.c,
	  src/SDCCmacro.h:
	  fixed bug #3152525:
	  sdcc doesn't pass double-quotes from -D option to sdcpp
	* debugger/mcs51/simi.c:
	  call ioctl(sock, FIONBIO, &iMode)
	  replaced with fcntl(sock, F_SETFL, FNONBLOCK | FASYNC) on *nix

2011-03-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asmain.c (main): fixed warning
	* sdas/linksrc/lkaomf51.c (OutputAOEMF51): fixed bug 1630751