@@ -1,5 +1,14 @@
 2011-03-28 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc,
+	  src/z80/gen.c,
+	  src/z80/ralloc.c,
+	  src/z80/z80.h:
+	  Preparations for handling IY in the new allocator.
+
+2011-03-28 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/z80/ralloc2.cc,
 	  src/z80/gen.c,
 	  src/z80/ralloc.c,
